fixed kotobomb overflow

--- a/hello-react/src/components/common/Kotobomb/style.css
+++ b/hello-react/src/components/common/Kotobomb/style.css
@@ -5,6 +5,7 @@
     left: 0;
     bottom: 0;
     z-index: 2;
+    overflow: hidden;
 }
 
 .kotobomb img {
