--- a/hello-react/src/components/pages/Welcome/style.css
+++ b/hello-react/src/components/pages/Welcome/style.css
@@ -1,6 +1,5 @@
 .welcome {
     background-color: #000000;
-    overflow: hidden;
 }
 
 .welcome .en {
